--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,10 @@ xtylearner-train = "xtylearner.scripts.train:main"
 [tool.setuptools]
 packages = ["xtylearner"]
 
+[tool.pytest.ini_options]
+addopts = "-vv"
+testpaths = ["tests"]
+
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
