--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,21 @@ packages = ["xtylearner"]
 addopts = "-vv"
 testpaths = ["tests"]
 
+[tool.black]
+line-length = 88
+target-version = ["py38"]
+
+[tool.ruff]
+target-version = "py38"
+line-length = 88
+
+[tool.ruff.lint]
+select = ["E", "F"]
+ignore = ["E501"]
+
+[tool.ruff.lint.isort]
+known-first-party = ["xtylearner"]
+
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
