Add tabular dataset loader

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "scikit-learn",
     "numpy",
     "nflows",
-    "pyyaml"
+    "pyyaml",
+    "pandas"
 ]
 
 [project.scripts]
