--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "numpy",
     "nflows",
     "pyyaml",
-    "pandas"
+    "pandas",
+    "spflow>=0.2"
 ]
 
 [project.scripts]
