--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   benchmark:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
         with:
@@ -52,6 +54,15 @@ jobs:
           from examples.benchmark_models import run_benchmark
           run_benchmark('benchmark_results.md')
           PY
+      - name: Commit benchmark results
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add benchmark_results.md
+          if ! git diff --cached --quiet; then
+            git commit -m "Update benchmark results"
+            git push origin HEAD:${{ github.ref }}
+          fi
       - name: Upload benchmark results
         uses: actions/upload-artifact@v4
         with:
