--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -25,7 +25,7 @@ jobs:
           if [ "${{ github.event_name }}" = "pull_request" ]; then
             # Get changed files in models directory
             CHANGED_FILES=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | grep "xtylearner/models/.*\.py$" || true)
-            
+
             if [ -z "$CHANGED_FILES" ]; then
               echo "No model files changed, running core models only"
               echo "strategy=core" >> $GITHUB_OUTPUT
@@ -115,59 +115,75 @@ jobs:
           MODEL_CHUNK_INDEX: ${{ matrix.chunk }}
           MODEL_CHUNK_TOTAL: ${{ needs.detect-changes.outputs.benchmark_strategy == 'parallel' && '4' || '1' }}
         run: |
-          set +e  # Disable exit on error for this step
           . .venv/bin/activate
-          
+
+          set -e
+
           # Always use the real commit hash - never modify it
           COMMIT_HASH=$(git rev-parse HEAD)
-          
+          if git rev-parse "${COMMIT_HASH}^" >/dev/null 2>&1; then
+            COMMIT_SPEC="${COMMIT_HASH}^!"
+          else
+            COMMIT_SPEC="$COMMIT_HASH"
+          fi
+
           echo "Running benchmarks for commit: $COMMIT_HASH"
+          echo "Commit specification: $COMMIT_SPEC"
           echo "Benchmark strategy: ${{ needs.detect-changes.outputs.benchmark_strategy }}"
           echo "Changed models: $BENCHMARK_MODELS"
           echo "Chunk: $MODEL_CHUNK_INDEX/$MODEL_CHUNK_TOTAL"
-          
-          # For parallel execution, use temporary result directory to avoid conflicts
+
+          ASV_BASE_ARGS="--machine github-actions --config asv.conf.json --show-stderr"
+          RESULTS_DIR=""
+
           if [ "${{ needs.detect-changes.outputs.benchmark_strategy }}" = "parallel" ]; then
-            # Create temporary results directory for this chunk
             TEMP_RESULTS_DIR=".asv/results-chunk-${{ matrix.chunk }}"
             mkdir -p "$TEMP_RESULTS_DIR/github-actions"
-            
-            # Run ASV with temporary results directory
+
             echo "Running ASV with chunk-specific results directory..."
-            asv run --machine github-actions -E existing --python same --results-dir "$TEMP_RESULTS_DIR"
-            
-            # Copy machine.json if it doesn't exist in main results
-            if [ -f "$TEMP_RESULTS_DIR/github-actions/machine.json" ] && [ ! -f ".asv/results/github-actions/machine.json" ]; then
+            if asv run "$COMMIT_SPEC" $ASV_BASE_ARGS --results-dir "$TEMP_RESULTS_DIR"; then
+              ASV_EXIT_CODE=0
+            else
+              ASV_EXIT_CODE=$?
+              echo "ASV run failed with exit code $ASV_EXIT_CODE"
+              exit $ASV_EXIT_CODE
+            fi
+
+            RESULTS_DIR="$TEMP_RESULTS_DIR/github-actions"
+
+            if [ -f "$RESULTS_DIR/machine.json" ] && [ ! -f ".asv/results/github-actions/machine.json" ]; then
               mkdir -p .asv/results/github-actions
-              cp "$TEMP_RESULTS_DIR/github-actions/machine.json" ".asv/results/github-actions/machine.json"
+              cp "$RESULTS_DIR/machine.json" ".asv/results/github-actions/machine.json"
             fi
           else
-            # Non-parallel execution - simplified ASV run
             echo "Running ASV benchmarks..."
             echo "Environment: BENCHMARK_MODELS=$BENCHMARK_MODELS"
-            echo "Commit: $(git rev-parse HEAD)"
-            
-            # Run ASV with virtualenv environment to save results properly
-            echo "Running ASV with proper environment management..."
-            asv run --machine github-actions --verbose
-            ASV_EXIT_CODE=$?
-            echo "ASV exit code: $ASV_EXIT_CODE"
-            
-            # Check results
-            echo "ASV results after run:"
-            ls -la .asv/results/github-actions/ || echo "No results directory"
-            find .asv/results -name "*.json" -not -name "machine.json" | head -5
+
+            if asv run "$COMMIT_SPEC" $ASV_BASE_ARGS; then
+              ASV_EXIT_CODE=0
+            else
+              ASV_EXIT_CODE=$?
+              echo "ASV run failed with exit code $ASV_EXIT_CODE"
+              exit $ASV_EXIT_CODE
+            fi
+
+            RESULTS_DIR=".asv/results/github-actions"
           fi
-          
-          # Show what was created
+
+          echo "ASV exit code: $ASV_EXIT_CODE"
+
+          if [ -z "$RESULTS_DIR" ]; then
+            echo "ASV did not set a results directory"
+            exit 1
+          fi
+
           echo "ASV results directory contents:"
-          if [ "${{ needs.detect-changes.outputs.benchmark_strategy }}" = "parallel" ]; then
-            ls -la ".asv/results-chunk-${{ matrix.chunk }}/github-actions/" || echo "No chunk results directory found"
-          else
-            ls -la .asv/results/github-actions/ || echo "No ASV results directory found"
+          ls -la "$RESULTS_DIR" || true
+
+          if ! find "$RESULTS_DIR" -maxdepth 1 -name "*.json" -not -name "machine.json" -print -quit; then
+            echo "No benchmark result files were produced in $RESULTS_DIR"
+            exit 1
           fi
-          
-          set -e  # Re-enable exit on error
       - name: Generate HTML reports
         run: |
           . .venv/bin/activate
@@ -249,10 +265,10 @@ jobs:
           # Get the real commit hash
           REAL_COMMIT_HASH=$(git rev-parse HEAD)
           echo "Real commit hash: $REAL_COMMIT_HASH"
-          
+
           # Create output directory
           mkdir -p .asv/results/github-actions
-          
+
           # Copy machine.json from any chunk (they should be identical)
           echo "=== Copying machine.json ==="
           find benchmark-chunks -name "machine.json" -type f | head -1 | while read -r machine_file; do
@@ -261,14 +277,14 @@ jobs:
               cp "$machine_file" ".asv/results/github-actions/machine.json"
             fi
           done
-          
+
           # Find all chunk result directories
           CHUNK_DIRS=""
           echo "Looking for chunk directories in benchmark-chunks/"
           find benchmark-chunks -name "results-chunk-*" -type d | while read -r chunk_dir; do
             echo "Found chunk directory: $chunk_dir"
           done
-          
+
           # Try multiple possible artifact structures
           for chunk_path in benchmark-chunks/.asv/results-chunk-*/ benchmark-chunks/results-chunk-*/; do
             if [ -d "$chunk_path" ]; then
@@ -276,7 +292,7 @@ jobs:
               echo "Added chunk directory: $chunk_path"
             fi
           done
-          
+
           if [ -n "$CHUNK_DIRS" ]; then
             echo "=== Merging chunk results using Python script ==="
             echo "Chunk directories: $CHUNK_DIRS"
@@ -289,7 +305,7 @@ jobs:
             echo "Available benchmark-chunks contents:"
             find benchmark-chunks -type f -name "*.json" | head -10
           fi
-          
+
           # Show final merged results
           echo "=== Final ASV Results ==="
           ls -la .asv/results/github-actions/
@@ -299,7 +315,7 @@ jobs:
             echo "Commit hash in file: $(jq -r '.commit_hash' "$file" 2>/dev/null || echo 'N/A')"
             echo "Benchmarks in file: $(jq -r '.results | keys[]' "$file" 2>/dev/null | wc -l || echo 'N/A')"
           done
-          
+
           # Generate combined HTML
           if ls .asv/results/github-actions/*.json 2>/dev/null | grep -v machine.json; then
             echo "Generating combined HTML from merged results..."
