Fix Unicode encoding issue in benchmark dashboard generation
- Add encoding='utf-8' to HTML file write operation
- Resolves GitHub Pages deployment failure with emoji characters
- Ensures proper dashboard generation in GitHub Actions workflow

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -393,7 +393,7 @@ jobs:
               </html>
               """
               
-              with open(output_path / 'index.html', 'w') as f:
+              with open(output_path / 'index.html', 'w', encoding='utf-8') as f:
                   f.write(html_content)
               
               print(f"Charts generated in {output_path}")
