Update benchmark process again

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -168,6 +168,7 @@ jobs:
           #!/usr/bin/env python3
           import json
           import sys
+          import os
           from pathlib import Path
           from datetime import datetime
           import argparse
