Pin numpy<2 for torch compatibility

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
 dependencies = [
     "torch>=2.0,<2.3",
     "scikit-learn",
-    "numpy",
+    "numpy>=1.26,<2",
     "nflows>=0.14",
     "pyyaml",
     "pandas",
